apps/api/overlays/local/don-schema-register-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: don-schema-register-http-route
spec:
  parentRefs:
    - name: public-gateway
      namespace: istio-gateway
      sectionName: https
  hostnames:
    - set-in-overlay
  rules:
    - backendRefs:
        - name: don-schema-register-svc
          kind: Service
          port: 8000
